--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -52,3 +52,32 @@
     font-size: 30px;
     color: #8A2BE2;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    gap: 14px;
+    margin: 18px 0;
+}
+
+@media screen and (max-width: 550px) {
+    .home-container h1 {
+        font-size: 32px;
+        text-align: center;
+    }
+
+    .link-text {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .home-container h1 {
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .link-text {
+        font-size: 16px;
+    }
+}
