--- a/src/pages/Admin/admin.css
+++ b/src/pages/Admin/admin.css
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   min-height: 100vh;
-  padding: 0 6px;
+  padding: 0 6px 28px 6px;
 }
 
 .label {
@@ -21,6 +21,10 @@
 
 .right {
   margin-right: 14px;
+}
+
+.btn-delete {
+  cursor: pointer;
 }
 
 .btn-register {
@@ -49,6 +53,7 @@
   background-color: rgba(36, 36, 36, 0.35);
   border-radius: 4px;
   padding: 14px 8px;
+  margin-bottom: 14px;
 }
 
 .preview {
